# bluesky-nexus

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: xml-conversion.py
src/bluesky_nexus/: convert_nexus.py
